--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -49,7 +50,7 @@
             android:text="Makers: Cat and Ben"
             android:textAlignment="textStart"
             android:textColor="@color/white"
-            />
+            android:gravity="start" />
 
         <LinearLayout
             android:layout_width="match_parent"
