--- a/app/src/main/res/layout/item_photos.xml
+++ b/app/src/main/res/layout/item_photos.xml
@@ -2,12 +2,13 @@
 <android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     app:cardElevation="40dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/item_photo_layout"
     android:orientation="vertical">
     <com.testingwallpapers.utils.SquareImage
         android:layout_width="match_parent"
